modify config branch name

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -6,7 +6,7 @@ production:
   backend:
     name: github-api
     repo: ayenzky/starter-template # Path to your Github repository
-    branch: develop # Branch to update (master by default)
+    branch: master # Branch to update (master by default)
 
 media_folder: "assets/img/uploads" # Folder where user uploaded files should go
 public_folder: "assets"
