--- a/admin/config.yml
+++ b/admin/config.yml
@@ -65,6 +65,6 @@ collections: # A list of collections the CMS should be able to edit
     fields: # The fields each document in this collection have
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
-    # meta: # Meta data fields. Just like fields, but without any preview element
-    #   - {label: "Publish Date", name: "date", widget: "datetime"}
-    #   - {label: "Categories", name: "categories", widget: "string"}
+    meta: # Meta data fields. Just like fields, but without any preview element
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Categories", name: "categories", widget: "string"}
