--- a/admin/config.yml
+++ b/admin/config.yml
@@ -68,3 +68,4 @@ collections: # A list of collections the CMS should be able to edit
     meta: # Meta data fields. Just like fields, but without any preview element
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Categories", name: "categories", widget: "string"}
+      - {label: "Banner", name: "banner", widget: "image"}
