change blog title and others

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -82,3 +82,18 @@ collections: # A list of collections the CMS should be able to edit
             fields:
               - {label: "File Name", name: "name", widget: "string"}
               - {label: "File Type", name: "file", widget: "image", media_folder: "assets/files"}
+  - name: "blog" # Used in routes, ie.: /admin/collections/:slug/edit
+    label: "Blog"  # Used in the UI, ie.: "New Post"
+    folder: "blog" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    fields: # The fields each document in this collection have
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Enter Unique Id eg: 12345", name: "id", widget: "string"}
+      - {label: "Author", name: "author", widget: "string"}
+      - {label: "Tags", name: "leadtag", widget: "string"}
+      - {label: "Thumbnail", name: "thumbnail", widget: "image", class: "image thumbnail", media_folder: "assets/img/blog"}
+      - {label: "Banner", name: "banner", widget: "image", class: "image featured", media_folder: "assets/img/blog/featured"}
+      - {label: "Short Description", name: "shortdesc", widget: "markdown"}
+      - {label: "Body", name: "body", widget: "markdown"}
+    meta: # Meta data fields. Just like fields, but without any preview element
+      - {label: "Publish Date", name: "date", widget: "date"}
