--- a/admin/config.yml
+++ b/admin/config.yml
@@ -24,6 +24,20 @@ collections: # A list of collections the CMS should be able to edit
   #   meta: # Meta data fields. Just like fields, but without any preview element
   #     - {label: "Publish Date", name: "date", widget: "datetime"}
   #     - {label: "Categories", name: "categories", widget: "string"}
+  - name: "filemanager"
+    label: "File Manager"
+    files:
+      - name: "filemanager"
+        label: "File Manager"
+        file: "data/files.json"
+        description: "Add file(image,doc,pdf) here"
+        fields:
+          - label: "File Manager"
+            name: "filemanager"
+            widget: "list"
+            fields:
+              - {label: "File Name", name: "name", widget: "string"}
+              - {label: "File Type", name: "file", widget: "image", media_folder: "assets/files"}
   - name: "sitedata"
     label: "Site Information"
     files:
